--- a/SuperLinkClassroom/MainWindow.xaml
+++ b/SuperLinkClassroom/MainWindow.xaml
@@ -195,6 +195,7 @@
                                                 Margin="0,10,8,0"
                                                 Padding="10,5"
                                                 x:Name="btn_Save"
+                                                Click="Btn_Save_OnClick"
                                                 Style="{StaticResource MaterialDesignRaisedLightButton}"
                                                 >
                                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
@@ -225,11 +226,10 @@
                                                    Padding="10,5"> Enter IP Mask:</TextBlock>
                                         <TextBox
                                             VerticalAlignment="Center"
-                                            x:Name="txtIPMask"
                                             Margin="20,0"
                                             materialDesign:HintAssist.Hint="ex:192.168.123."
                                             materialDesign:HintAssist.HintOpacity="20"
-                                            
+                                            x:Name="txtIPMask"
                                             Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
                                         <Button Width="100"
                                                 Margin="0,10,5,0"
