--- a/SuperLinkClassroom/MainWindow.xaml
+++ b/SuperLinkClassroom/MainWindow.xaml
@@ -92,7 +92,95 @@
                                     <!-- <Canvas x:Name="connectionPage" Grid.Row="1" /> -->
                                 </Grid>
                             </TabItem>
+                            <TabItem x:Name="RemoteTabItem" Width="110">
+                                <TabItem.Header>
+                                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                                        <customControls:PackIcon Margin="2,0" Width="24" Height="24" HorizontalAlignment="Center" Kind="RemoteDesktop" />
+                                        <TextBlock HorizontalAlignment="Center" Text="Remote" />
+                                    </StackPanel>
+                                </TabItem.Header>
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto" />
+                                        <!-- New row for buttons -->
+                                        <RowDefinition Height="*" />
+                                        <!-- Existing row for canvas -->
+                                    </Grid.RowDefinitions>
+                                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="10">
+                                        <StackPanel>
+                                            <TextBlock VerticalAlignment="Center"
+                                                       FontSize="15"
+                                                       FontWeight="Bold"
+                                                       Margin="0,10,0,0"
+                                                       Padding="10,5"> Enter IP Address:</TextBlock>
+                                            <TextBlock Text="Remote the IP Address's PC" Margin="10,0,0,0" />
+
+                                        </StackPanel>
+                                        <TextBox
+                                            Width="150"
+                                            FontSize="15"
+                                            VerticalAlignment="Center"
+                                            Margin="20,10"
+                                            materialDesign:HintAssist.Hint="ex: 192.168.123.1"
+                                            materialDesign:HintAssist.HintOpacity="20"
+                                            x:Name="txtIP"
+                                            Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
+                                        <Button Width="145"
+                                                Margin="0,10,8,0"
+                                                Padding="10,5"
+                                                x:Name="btn_Remote"
+                                                Style="{StaticResource MaterialDesignRaisedLightButton}"
+                                                Click="Btn_Remote_OnClick">
+                                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                                <customControls:PackIcon Margin="2,0" Width="24" Height="24" Kind="LanConnect" />
+                                                <TextBlock x:Name="txtRemote" Text="Remote" Margin="5,0,0,0" />
+                                            </StackPanel>
+                                        </Button>
+                                        <Button Width="145"
+                                                Margin="0,10,8,0"
+                                                Padding="10,5"
+                                                x:Name="btn_Disremote"
+                                                Style="{StaticResource MaterialDesignRaisedLightButton}"
+                                                Click="btn_Disremote_Click">
+                                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                                <customControls:PackIcon Margin="2,0" Width="24" Height="24" Kind="LanDisconnect" />
+                                                <TextBlock x:Name="txtDisremote" Text="Disconnect" Margin="5,0,0,0" />
+                                            </StackPanel>
+                                        </Button>
+                                        <!-- <Button Width="130" -->
+                                        <!--         Margin="0,10,5,0" -->
+                                        <!--         Padding="10,5" -->
+                                        <!--         x:Name="btn_UnShow" -->
+                                        <!--         Style="{StaticResource MaterialDesignRaisedLightButton}" -->
+                                        <!--         Click="Btn_UnShow_OnClick"> -->
+                                        <!--     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center"> -->
+                                        <!--         <customControls:PackIcon Margin="2,0" Width="24" Height="24" Kind="TelevisionPlay" /> -->
+                                        <!--         <TextBlock Text="UnShow" Margin="5,0,0,0" /> -->
+                                        <!--     </StackPanel> -->
+                                        <!-- </Button> -->
+                                        
+                                    </StackPanel>
+                                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="10">
+                                        <Button
+                                            Margin="0,10,8,0"
+                                            Padding="10,5"
+                                            Style="{StaticResource MaterialDesignRaisedLightButton}">
+                                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                                <customControls:PackIcon Margin="2,0" Width="24" Height="24" Kind="Computer" />
+                                                <TextBlock x:Name="txtComputerName" Text="" Margin="5,0,0,0" />
+                                            </StackPanel>
+                                        </Button>
         
+                                    </StackPanel>
+                                    <Grid Grid.Row="1">
+                                        <!-- Grid content -->
+                                        <Border BorderBrush="Black" BorderThickness="1" Grid.Row="1">
+                                            <Canvas x:Name="RemoteMonitor" />
+                                        </Border>
+                                    </Grid>
+                                    <!-- <Canvas x:Name="connectionPage" Grid.Row="1" /> -->
+                                </Grid>
+                            </TabItem>
                             <TabItem x:Name="TearcherTabItem" Width="110">
                                 <TabItem.Header>
                                     <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
